# mpu6050

./: README.md  The 6 parameters  conclusion  serial.cpp
Hardware/: MPU6050.c  MyI2C.c  OLED.c  OLED.h  PWM.c  PWM.h  Serial.c  Serial.h
User/: main.c  stm32f10x_conf.h  stm32f10x_it.c
mpu-tracker/: CMakeLists.txt  main.cpp
system/: Timer.c
